# lox.cpp

./: .gitignore  AstPrinter.h  CMakeLists.txt  Environment.cpp  Environment.h  Expr.h  Interpreter.cpp  Interpreter.h  Lox.cpp  Lox.h  LoxCallable.h  LoxClass.cpp  LoxClass.h  LoxFunction.cpp  LoxFunction.h  Object.h  Parser.cpp  Parser.h  README.md  Resolver.cpp  Resolver.h  Scanner.cpp  Scanner.h  Stmt.h  Token.cpp  Token.h  Value.h  main.cpp
src/: AstPrinter.h  Environment.h  Expr.h  Interpreter.cpp  Interpreter.h  Lox.h  LoxClass.cpp  LoxClass.h  Resolver.h  Scanner.cpp  Scanner.h  Stmt.h  Token.cpp  Value.h  main.cpp
test/: AstPrinter_test.cpp  CMakeLists.txt  Integration_test.cpp  Parser_test.cpp  Resolver_test.cpp  TestUtil.h  Token_test.cpp  Value_test.cpp
test/integration_test/class/: constructor.lox  this.lox
test/integration_test/function/: local_function_and_closures.lox
tests/: AstPrinter_test.cpp  CMakeLists.txt  Environment_test.cpp  Integration_test.cpp  Interpreter_test.cpp  Object_test.cpp  Parser_test.cpp  Resolver_test.cpp  Scanner_test.cpp  TestUtil.h  Token_test.cpp  Value_test.cpp
tests/integration_test/class/: basic.lox  inheritance.lox
tests/integration_test/function/: basic.lox
tool/: GenerateAst.cpp
